--- a/avaas/src/main/resources/application.properties
+++ b/avaas/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 #Application Port
 quarkus.http.port=4080
 
+#MySQL configurations
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=root
-quarkus.datasource.password=avaas
-quarkus.datasource.reactive.url=mysql://localhost:3306/avaas
+quarkus.datasource.password=db-avaas
+quarkus.datasource.reactive.url=mysql://db-avaas.ch7rqqyaosb9.us-east-1.rds.amazonaws.com:3306/avaas
+#mysql://localhost:3306/avaas
+
+#Swagger UI
 quarkus.swagger-ui.path=swagger-ui
