--- a/avaas/src/main/resources/application.properties
+++ b/avaas/src/main/resources/application.properties
@@ -10,3 +10,18 @@ quarkus.datasource.reactive.url=mysql://db-avaas.ch7rqqyaosb9.us-east-1.rds.amaz
 
 #Swagger UI
 quarkus.swagger-ui.path=swagger-ui
+
+# The Kafka broker location (defaults to localhost:9092)
+kafka.bootstrap.servers=localhost:9092
+
+# Configuring the incoming av channel (reading from Kafka)
+mp.messaging.incoming.av-in.connector=smallrye-kafka
+mp.messaging.incoming.av-in.topic=av
+mp.messaging.incoming.av-in.key.deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
+mp.messaging.incoming.av-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+# Configuring the outgoing av channel (writing to Kafka)
+mp.messaging.outgoing.av-out.connector=smallrye-kafka
+mp.messaging.outgoing.av-out.topic=av
+mp.messaging.outgoing.av-out.key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
+mp.messaging.outgoing.av-out.value.serializer=org.apache.kafka.common.serialization.StringSerializer
