Consume Av_Event

--- a/avaas/src/main/resources/application.properties
+++ b/avaas/src/main/resources/application.properties
@@ -17,14 +17,30 @@ quarkus.swagger-ui.path=swagger-ui
 # The Kafka broker location (defaults to localhost:9092)
 kafka.bootstrap.servers=localhost:9092
 
-# Configuring the incoming av channel (reading from Kafka)
-mp.messaging.incoming.av-in.connector=smallrye-kafka
-mp.messaging.incoming.av-in.topic=av
-mp.messaging.incoming.av-in.key.deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
-mp.messaging.incoming.av-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#################### AV KAFKA #####################
+#Kafka Consume AV
 
-# Configuring the outgoing av channel (writing to Kafka)
-mp.messaging.outgoing.av-out.connector=smallrye-kafka
-mp.messaging.outgoing.av-out.topic=av
-mp.messaging.outgoing.av-out.key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
-mp.messaging.outgoing.av-out.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+# Configuring the incoming av channel (reading from Kafka)
+#mp.messaging.incoming.av-in.connector=smallrye-kafka
+#mp.messaging.incoming.av-in.topic=av
+#mp.messaging.incoming.av-in.key.deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
+#mp.messaging.incoming.av-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#
+#
+##Kafka Produce
+#
+## Configuring the outgoing av channel (writing to Kafka)
+#mp.messaging.outgoing.av-out.connector=smallrye-kafka
+#mp.messaging.outgoing.av-out.topic=av
+#mp.messaging.outgoing.av-out.key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
+#mp.messaging.outgoing.av-out.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+###################################################
+
+# Configuring the incoming av-event-topic channel (reading from Kafka)
+mp.messaging.incoming.av-event-topic.connector=smallrye-kafka
+mp.messaging.incoming.av-event-topic.topic=av-event-topic
+mp.messaging.incoming.av-event-topic.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#mp.messaging.incoming.av-event-topic.value.deserializer=avaas.kafka.deserializer.AvEventDeserializer
+mp.messaging.incoming.av-event-topic.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
