Apilot user interface added and all topics working

--- a/avaas/src/main/resources/application.properties
+++ b/avaas/src/main/resources/application.properties
@@ -18,29 +18,47 @@ quarkus.swagger-ui.path=swagger-ui
 kafka.bootstrap.servers=localhost:9092
 
 #################### AV KAFKA #####################
+
 #Kafka Consume AV
 
 # Configuring the incoming av channel (reading from Kafka)
-#mp.messaging.incoming.av-in.connector=smallrye-kafka
-#mp.messaging.incoming.av-in.topic=av
-#mp.messaging.incoming.av-in.key.deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
-#mp.messaging.incoming.av-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.av-in.connector=smallrye-kafka
+mp.messaging.incoming.av-in.topic=av
+mp.messaging.incoming.av-in.key.deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
+mp.messaging.incoming.av-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 #
 #
 ##Kafka Produce
 #
 ## Configuring the outgoing av channel (writing to Kafka)
-#mp.messaging.outgoing.av-out.connector=smallrye-kafka
-#mp.messaging.outgoing.av-out.topic=av
-#mp.messaging.outgoing.av-out.key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
-#mp.messaging.outgoing.av-out.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.av-out.connector=smallrye-kafka
+mp.messaging.outgoing.av-out.topic=av
+mp.messaging.outgoing.av-out.key.serializer=org.apache.kafka.common.serialization.IntegerSerializer
+mp.messaging.outgoing.av-out.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 ###################################################
 
+
+#################### AV Event KAFKA #####################
+
+#Kafka Consume AV Event
+
 # Configuring the incoming av-event-topic channel (reading from Kafka)
-mp.messaging.incoming.av-event-topic.connector=smallrye-kafka
-mp.messaging.incoming.av-event-topic.topic=av-event-topic
-mp.messaging.incoming.av-event-topic.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-#mp.messaging.incoming.av-event-topic.value.deserializer=avaas.kafka.deserializer.AvEventDeserializer
-mp.messaging.incoming.av-event-topic.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.av-event.connector=smallrye-kafka
+mp.messaging.incoming.av-event.topic=av-event
+mp.messaging.incoming.av-event.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.av-event.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+
+#################### APilot KAFKA #####################
+
+#Kafka Consume APilot
+# Configuring the incoming apilot channel (reading from Kafka)
+mp.messaging.incoming.apilot.connector=smallrye-kafka
+mp.messaging.incoming.apilot.topic=apilot
+mp.messaging.incoming.apilot.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.apilot.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+###################################################
+
 
