--- a/avaas/pom.xml
+++ b/avaas/pom.xml
@@ -65,6 +65,10 @@
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	  <groupId>org.jboss.resteasy</groupId>
+	  <artifactId>resteasy-client</artifactId>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
